welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:11: error: type mismatch;
 found   : Unit
 required: Boolean
    } else gauche()
                 ^SlugTracking:5: error: type mismatch;
 found   : Unit
 required: Boolean
  if (estFaceMur()) {
  ^